# CCLogger

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  log.txt
example/: CMakeLists.txt  example.cc  example_multi_backend.cc  example_stream.cc
logger/: CCLogger.cc  CCLogger.hpp  CCLoggerExports.h  CCLoggerStream.cc  CCLoggerStream.h  CCLogger_default_behave.cpp  CCLogger_default_behave.h  CCSourceLocation.h  CMakeLists.txt  decorator.h  formater.cpp  formater.h  logger_io.h  logger_level.h
logger/decorator/: console_color_decorator.cpp  console_color_decorator.h  console_level_color.cpp  console_level_color.h
logger/formater/: blank_formater.cpp  blank_formater.h  simplify_formarter.cpp  simplify_formarter.h  standard_formater.cpp  standard_formater.h
logger/io/: fileio.cpp  fileio.h  null_io.hpp  standard_console.cpp  standard_console.h
logger/utils/: logger_level_compare.hpp  logger_level_stringify.hpp  logger_time_formater.cpp  logger_time_formater.h
test/: CMakeLists.txt  test.cpp
